--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ div.content {
 <body>
 
 <ul class="sidenav">
-  <li><a class="active" href="#home">Home</a></li>
+  <li><a class="active" href="index.html">Home</a></li>
   <li><a href="gallery.html">Gallery</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a href="#about">About</a></li>
