--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,29 @@ body {
 }
 
 .container{
+    display:grid;
+    grid-template-columns:auto auto auto;
+    
     font-size:50px;
     color:firebrick;
-    border:10px solid #500000;
-    border-radius: 10px;
+   
 }
+.c1{
+  grid-row:1/2;
+  border:1px solid blue;
+}
+.c2{
+  grid-column:2/3;
+  border:1px solid green;
+}
+.c3{
+  grid-row:2/3;
+  grid-column:1/3;
+  border:1px solid crimson;
+  text-align: center;
+  font-size:60px;
+}
+
 
 ul.sidenav {
   list-style-type: none;
@@ -86,9 +104,9 @@ div.content {
 <div class="content">
     <h1><u>Contact me on the following</u></h1>
     <div class="container">
-        <p>Instagram: <a href="https://www.instagram.com/i.rupam">@i.rupam</a></p>
-        <p>Twitter: <a href="https://www.twitter.com/meRupz">@meRupz</a></p>
-        <p>GitHub: <a href="https://github.com/iRupam">@iRupam</a></p>
+        <div class="c1">Instagram: <a href="https://www.instagram.com/i.rupam">@i.rupam</a></div>
+        <div class="c2">Twitter: <a href="https://www.twitter.com/meRupz">@meRupz</a></div>
+        <div class="c3">GitHub: <a href="https://github.com/iRupam">@iRupam</a></div>
     </div>
 </div>
 
