modified help page

--- a/help.html
+++ b/help.html
@@ -1,8 +1,9 @@
 <html>
 <head>
 <title>Help</title>
+    <link rel="stylesheet" type="text/css" href="helpstyle.css">
 </head>
 <body>
-All working correctly.
+<div class="msg"><p>All working correctly.</p></span>
 </body>
 </html>
