added marquee for the message

--- a/help.html
+++ b/help.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" type="text/css" href="helpstyle.css">
 </head>
 <body>
-<div class="msg"><p>All working correctly.</p></span>
+<div class="msg"><marquee scrollamount="30">All working correctly.</marquee></span>
 </body>
 </html>
