updated index file with mothertongue.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ div.content {
 <title>Rupam's World</title>
 </head>
 <body>
+  <font size="4"></font>
 
 <ul class="sidenav">
   <li><a class="active" href="index.html">Home</a></li>
@@ -76,8 +77,8 @@ div.content {
 </ul>
 
 <div class="content">
-  <h1>Welcome to Rupam's site</h1>
-  <p>I use this site to showcase my projects.</p>
+  <h1>Welcome to Rupam's site / মোৰ ৱেবচাইটলৈ আপোনাক স্ৱাগতম ।</h1>
+  <p>I use this site to showcase my projects. / মই এই ৱেবচাইটটো নিজৰ পৰিযোজনাসমুহ প্ৰদৰ্শন কৰিবলৈ ৱ্য়বহাৰ কৰো ।</p>
   <p>Although I'm not new to web development, I am still a beginner <mark>(script kiddie)</mark> on this topic.
   <p>I'll be updating this site a lot both in terms of content and design. So please be <span style="background:red;"> <b>patient<b></span>.</p>
 </div>
