--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <style>
 body {
   margin: 0;
-  background-color:darkgrey;
+  background:linear-gradient(45deg,navy,pink,crimson);
   color:midnightblue;
 }
 
