--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 body {
   margin: 0;
-  background-image: linear-gradient(to right,orange,white,green);
+  background-image: linear-gradient(292deg, #962ad6, #eb8321);
 }
 
 ul.sidenav {
