added blog post

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ div.content {
   <p>Although I'm not new to web development, I am still a beginner <mark>(script kiddie)</mark> on this topic.
   <p>I'll be updating this site a lot both in terms of content and design. So please be <span style="background:red;"> <b>patient<b></span>.</p>
 </div>
+  <p>Read My latest <a href="http://bit.do/pdfthumb">blog post here.</a></p>
 
 </body>
 </html>
