--- a/help.html
+++ b/help.html
@@ -2,6 +2,7 @@
 <head>
 <title>Help</title>
     <link rel="stylesheet" type="text/css" href="helpstyle.css">
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
 $(window).load(function() {
 		// Animate loader off screen
