--- a/help.html
+++ b/help.html
@@ -3,6 +3,7 @@
 <title>Help</title>
     <link rel="stylesheet" type="text/css" href="helpstyle.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-migrate-1.4.1.min.js"></script>
     <script>
 $(window).load(function() {
 		// Animate loader off screen
