--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="helpstyle.css">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script>
-$(window).on('load',(function() {
+$(window).on('load',function() {
 		// Animate loader off screen
 		$(".se-pre-con").fadeOut("slow");;
 	});
